[package]
name = "bulletproofs"
version = "0.1.0"
authors = ["Cathie Yun <cathie@chain.com>", 
           "Henry de Valence <hdevalence@hdevalence.ca>",
           "Oleg Andreev <oleganza@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/lemontreeran/bulletproofs"
categories = ["cryptography"]
keywords = ["cryptography", "ristretto", "zero-knowledge", "bulletproofs"]
description = "A pure-Rust implementation of Bulletproofs using Ristretto"

[dependencies]
# curve25519-dalek = { version = "0.19", features = ["serde"] }
curve25519-dalek = { git = "https://github.com/lemontreeran/curve25519-dalek", tag = "0.19.1" }
subtle = { git = "https://github.com/dalek-cryptography/subtle", tag = "0.7.1" }
sha3 = "0.7"
digest = "0.7"
rand = "0.5.0-pre.2"
byteorder = "1.2.1"
# serde = "1"
serde = { version = "1.0", features = ["derive"] }
# Serde_derive = "1"
tiny-keccak = "1.4.1"
failure = "0.1"
merlin = { git = "https://github.com/dalek-cryptography/merlin", tag = "0.3.0" }

[dev-dependencies]
hex = "^0.3"
criterion = "0.2"
bincode = "1"

[features]
avx2_backend = ["curve25519-dalek/avx2_backend"]

[[bench]]
name = "bulletproofs"
harness = false

